# fuzzcheck-rs

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  build.rs  readme.md  rust-toolchain  rustfmt.toml  status.txt
cargo-fuzzcheck/: Cargo.toml  README.md
cargo-fuzzcheck/src/: lib.rs  main.rs  project.rs  templates.rs
cargo-fuzzcheck/src/project/: init.rs  mod.rs  read.rs  write.rs
cargo-fuzzcheck/src/ui/: app.rs  error_view.rs  events.rs  framework.rs  fuzz_target_comm.rs  fuzzing.rs  hlist.rs  horizontal_list_view.rs  initial.rs  initialized.rs  mod.rs  preinit.rs  run_fuzz.rs  text_field_view.rs  vertical_list_view.rs
fuzzcheck/: Cargo.toml  README.md  build.rs
fuzzcheck/benches/: my_benchmark.rs
fuzzcheck/src/: and_sensor_and_pool.rs  artifacts_pool.rs  bitset.rs  bloom_filter.rs  builder.rs  c_builtins.c  code_coverage_sensor.rs  coverage_sensor_and_pool.rs  data_structures.rs  fenwick_tree.rs  fuzzer.rs  hasher.rs  hibitset.rs  hooks.rs  input.rs  input_minify_pool.rs  input_pool.rs  lib.rs  maximize_pool.rs  noop_sensor.rs  pool.rs  sensor_and_pool.rs  signals_handler.rs  split_string.rs  subvalue_provider.rs  traits.rs  ui_world.rs  unique_coverage_pool.rs  unit_pool.rs  weighted_index.rs  world.rs
fuzzcheck/src/code_coverage_sensor/: extract_llvm_cov_sections.rs  hooks.rs  instrumentation_pointers_linux.c  instrumentation_pointers_mac.c  leb128.rs  llvm_coverage.rs  mod.rs  serialized.rs
fuzzcheck/src/mutators/: alternation.rs  arbitrary_only.rs  arc.rs  array.rs  bool.rs  boxed.rs  char.rs  character_classes.rs  cow.rs  dictionary.rs  either.rs  enums.rs  filter.rs  fixed_len_vector.rs  incremental_map.rs  integer.rs  integer_within_range.rs  map.rs  mod.rs  never.rs  num.rs  option.rs  ordering.rs  range.rs  rc.rs  recursive.rs  result.rs  string.rs  tuples.rs  unique.rs  unit.rs  vector.rs  vose_alias.rs  wrapper.rs
fuzzcheck/src/mutators/grammar/: ast.rs  grammar.rs  incremental_map_conformance.rs  list.rs  mod.rs  mutators.rs  (+2 more)
fuzzcheck/src/nix_subset/: errno.rs  mod.rs  signal.rs  unistd.rs
fuzzcheck/src/sensors_and_pools/: adapter_pool.rs  allocations_sensor.rs  and_sensor_and_pool.rs  array_of_counters.rs  artifacts_pool.rs  compatible_with_iterator_sensor.rs  map_sensor.rs  maximise_counter_value_pool.rs  maximise_each_counter_pool.rs  maximise_observation_pool.rs  maximise_single_value_pool.rs  maximize_pool.rs  merged_sensors.rs  mod.rs  most_n_diverse_pool.rs  noop_sensor.rs  optimise_aggregate_stat_pool.rs  simplest_to_activate_counter_pool.rs  static_value_sensor.rs  sum_coverage_pool.rs  test_failure_pool.rs  unique_coverage_pool.rs  unique_values_pool.rs  unit_pool.rs
fuzzcheck/src/serializers/: mod.rs  serde_ron_serializer.rs  serde_serializer.rs
fuzzcheck/tests/: alternation_char_mutators.rs  char_mutators.rs  const_generics.rs  constrained_integer.rs  derived_enum.rs  derived_mutually_recursive_structs.rs  derived_recursive_struct.rs  derived_recursive_struct_fully_custom.rs  derived_struct.rs  enum_with_ignored_variant.rs  grammar_based_mutators.rs  lib.rs  option.rs  vector.rs
fuzzcheck/tests/expansions/: empty_structs.rs  enums_ignore_variant.rs  enums_with_generic_type_params.rs  enums_with_items_with_and_without_fields.rs  enums_with_multiple_empty_items.rs  enums_with_one_empty_item.rs  enums_with_one_item_one_field.rs  expanded.rs  mod.rs  one_field_structs.rs  recursive_enum.rs  recursive_struct.rs  structs_with_generic_type_params.rs  two_field_structs.rs
fuzzcheck_arg_parser/: Cargo.toml  README.md
fuzzcheck_arg_parser/src/: lib.rs
fuzzcheck_common/: Cargo.toml
fuzzcheck_common/src/: arg.rs  ipc.rs  lib.rs
fuzzcheck_input/: Cargo.toml
fuzzcheck_input/benches/: integer.rs  vector.rs
fuzzcheck_input/examples/: bool.rs  integer_u8.rs  option_u8.rs  vector_u8.rs
fuzzcheck_input/src/: bool.rs  integer.rs  lib.rs  option.rs  vector.rs  void.rs
fuzzcheck_mutator_trait/: Cargo.toml
fuzzcheck_mutator_trait/src/: lib.rs
fuzzcheck_mutators/: Cargo.toml  README.md
fuzzcheck_mutators/benches/: integer.rs  vector.rs
fuzzcheck_mutators/examples/: bool.rs  char_mutator_property_test.rs  derive_enum.rs  derive_enum_check_results.rs  derive_struct.rs  either.rs  integer_mutators.rs  integer_u8.rs  option_u8.rs  tuple.rs  vector_u8.rs  vector_vector_u8.rs
fuzzcheck_mutators/src/: algebra.rs  alternation.rs  bool.rs  bottom.rs  box.rs  boxed.rs  chain.rs  char.rs  dictionary.rs  either.rs  enums.rs  fixed_len_vector.rs  grammar_string.rs  homogenous_alternation.rs  incremental_map.rs  integer.rs  integer_within_range.rs  lib.rs  map.rs  never.rs  num.rs  option.rs  ordering.rs  phantom_data.rs  proc_macro.rs  range.rs  recursive.rs  result.rs  tuples.rs  unit.rs  vector.rs  void.rs  vose_alias.rs  wrapped.rs  wrapper.rs
fuzzcheck_mutators/src/grammar/: ast.rs  grammar.rs  incremental_map_conformance.rs  list.rs  mapping.rs  mod.rs  mutators.rs  parser.rs  readme.md
fuzzcheck_mutators/tests/: alternation_char_mutators.rs  char_mutators.rs  constrained_integer.rs  lib.rs  option.rs  vector.rs
fuzzcheck_mutators/tests/expansions/: empty_structs.rs  enums_with_generic_type_params.rs  enums_with_items_with_and_without_fields.rs  enums_with_multiple_empty_items.rs  enums_with_one_item_multiple_fields.rs  enums_with_one_item_one_field.rs  expanded.rs  mod.rs  one_field_structs.rs  recursive_enum.rs  recursive_struct.rs  structs_with_generic_type_params.rs  two_field_structs.rs
fuzzcheck_mutators_derive/: Cargo.toml
fuzzcheck_mutators_derive/src/: enums.rs  lib.rs  lib_old.rs  macro_lib.rs  parser.rs  single_variant.rs  struct_derive.rs  structs_and_enums.rs  token_builder.rs  tuples.rs
fuzzcheck_mutators_derive/tests/expansions/: Cargo.toml
fuzzcheck_nix_subset/: Cargo.toml  README.md
fuzzcheck_nix_subset/src/: errno.rs  lib.rs  signal.rs
fuzzcheck_serializer/: Cargo.toml  README.md
fuzzcheck_serializer/src/: json_serializer.rs  lib.rs  serde_serializer.rs
fuzzcheck_traits/: Cargo.toml
fuzzcheck_traits/src/: lib.rs
nix_subset/: Cargo.toml
nix_subset/src/: lib.rs  signal.rs  unistd.rs
(+104 files in other folders)
