[package]
name = "fuzzcheck"
version = "0.1.0"
authors = ["Loïc Lecrenier <loic.lecrenier@me.com>"]
edition = "2018"

[dependencies]
rand = "0.7.0"
rand_distr = "0.2.1"
libc = "0.2"
lazy_static = "1.3.0"
serde = "1.0.94"
serde_json = "1.0.40"
clap = "2.33.0"

[build-dependencies]
cc = "1.0.37"

[[bin]]
name = "fuzzcheck"
path = "src/bin/fuzzcheck.rs"

