[package]
name = "fuzzcheck"
version = "0.1.0"
authors = ["Loïc Lecrenier <loic.lecrenier@me.com>"]
edition = "2018"

[dependencies]
rand = "0.7.0"
rand_distr = "0.2.1"
libc = "0.2"
lazy_static = "1.3.0"
clap = "2.33.0"
hashbrown = "0.6.0"
serde = { version = "1.0.94", features = ["derive"] }
serde_json = "1.0.40"

[build-dependencies]
cc = "1.0.37"

[[bin]]
name = "fuzzcheck"
path = "src/bin/fuzzcheck.rs"
