[workspace]

members = [
    "fuzzcheck_common",
    "cargo-fuzzcheck",
    "fuzzcheck",
    "fuzzcheck_mutators",
    "fuzzcheck_mutators_derive",
    "fuzzcheck_serializer",
    "fuzzcheck_traits",
    "fuzzcheck_mutators_derive/tests/*"
]

exclude = [
    "usage_tests",
]

[patch.crates-io]
decent-synquote-alternative = { git = "file:///Users/loic/Documents/decent-synquote-alternative" }
fastrand = { git = "https://github.com/loiclec/fastrand.git" }
proc-macro2 = { path = "/Users/loic/Documents/proc-macro2" }