[package]
name = "cargo-fuzzcheck"
version = "0.7.1"
authors = ["Loïc Lecrenier <loic.lecrenier@me.com>"]
edition = "2018"
description = "Command line tool to use fuzzcheck-rs"
repository = "https://git.sr.ht/~loic/fuzzcheck-rs"
readme = "README.md"
license = "MIT"
keywords = ["fuzzing", "test"]
categories = ["development-tools"]

[dependencies.getopts]
version = "0.2"

[dependencies.fuzzcheck_common]
path = "../fuzzcheck_common"
version = "0.7.0"

[[bin]]
name = "cargo-fuzzcheck"
path = "src/main.rs"