[package]
name = "cargo-fuzzcheck"
version = "0.9.0"
authors = ["Loïc Lecrenier <loic.lecrenier@me.com>"]
edition = "2021"
description = "Command line tool to use fuzzcheck-rs"
homepage = "https://fuzzcheck.neocities.org"
repository = "https://github.com/loiclec/fuzzcheck-rs"
readme = "README.md"
license = "MIT"
keywords = ["property", "fuzzer", "fuzzing", "test", "testing"]
categories = ["development-tools::testing"]

[dependencies.getopts]
version = "0.2"

[dependencies.fuzzcheck_common]
path = "../fuzzcheck_common"
version = "0.10.0"

[[bin]]
name = "cargo-fuzzcheck"
path = "src/main.rs"