[package]
name = "fuzzcheck"
version = "0.9.0"
authors = ["Loïc Lecrenier <loic.lecrenier@me.com>"]
edition = "2021"
description = "A modular, structure-aware, and feedback-driven fuzzing engine for Rust functions"
homepage = "https://fuzzcheck.neocities.org"
repository = "https://github.com/loiclec/fuzzcheck-rs"
readme = "README.md"
license = "MIT"
keywords = ["property", "fuzzer", "fuzzing", "test", "testing"]
categories = ["development-tools::testing"]

[build-dependencies]
cc = "1"

[features]
grammar_mutator = [] 
regex_grammar = ["grammar_mutator", "regex-syntax"]
serde_json_serializer = ["serde", "serde_json"]

default = ["grammar_mutator", "regex_grammar", "serde_json_serializer"]

[dependencies]
getopts = "0.2"
fastrand = "1"
bitflags = "1"
cfg-if = "1"
libc = { version = "0.2", default_features = false  }

md5 = "0.7"
object = { version = "0.27", default_features = false, features = ["read"] }
flate2 = { version = "1", default_features = false, features = ["zlib"] }

fuzzcheck_common = { path = "../fuzzcheck_common", version = "0.9.0" }

serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

fuzzcheck_mutators_derive = { path = "../fuzzcheck_mutators_derive", version = "0.10.0" }

ahash = "0.7"

regex-syntax = { version = "0.6", optional = true }
nu-ansi-term = "0.39"

[dev-dependencies]
criterion = "0.3"

[lib]
name = "fuzzcheck"
bench = false


[[bench]]
name = "my_benchmark"
harness = false
