[package]
name = "fuzzcheck"
version = "0.13.0"
authors = ["Loïc Lecrenier <loic.lecrenier@me.com>"]
edition = "2024"
description = "A modular, structure-aware, and feedback-driven fuzzing engine for Rust functions"
homepage = "https://fuzzcheck.neocities.org"
repository = "https://github.com/loiclec/fuzzcheck-rs"
readme = "README.md"
license = "MIT"
keywords = ["property", "fuzzer", "fuzzing", "test", "testing"]
categories = ["development-tools::testing"]

[build-dependencies]
cc = "1.1.28"

[features]
grammar_mutator = []
regex_grammar = ["grammar_mutator", "regex-syntax"]
serde_json_serializer = ["serde", "serde_json"]
serde_ron_serializer = ["serde", "ron"]

default = ["grammar_mutator", "regex_grammar", "serde_json_serializer"]

[dependencies]
getopts = "0.2.21"
fastrand = "1.9.0"
cfg-if = "1.0.0"
libc = { version = "0.2.126", default-features = false }

md5 = "0.7.0"
object = { version = "0.29.0", default-features = false, features = ["read"] }
flate2 = { version = "1.0.24", default-features = false, features = ["zlib"] }

fuzzcheck_common = { path = "../fuzzcheck_common", version = "0.13.0" }

serde = { version = "1.0.210", features = ["derive"], optional = true }
serde_json = { version = "1.0.128", optional = true }
ron = { version = "0.7.1", optional = true }

fuzzcheck_mutators_derive = { path = "../fuzzcheck_mutators_derive", version = "0.13.0" }

ahash = "0.7.8"

regex-syntax = { version = "0.6.29", optional = true }
nu-ansi-term = "0.46.0"

bit-vec = "0.6.3"
rustc-demangle = "0.1.24"

[lib]
name = "fuzzcheck"
bench = false
