[package]
name = "fuzzcheck_arg_parser"
version = "0.2.1"
authors = ["Loïc Lecrenier <loic.lecrenier@me.com>"]
edition = "2018"
description = "Argument parser for fuzzcheck-rs"
repository = "https://git.sr.ht/~loic/fuzzcheck-rs"
readme = "README.md"
license = "MIT"
keywords = ["fuzzing", "test"]
categories = ["development-tools"]

[dependencies]
getopts = "0.2"

[lib]
name = "fuzzcheck_arg_parser"
