[package]
name = "fuzzcheck_common"
version = "0.8.0"
authors = ["Loïc Lecrenier <loic.lecrenier@me.com>"]
edition = "2021"
description = "Common components for both cargo-fuzzcheck and fuzzcheck"
repository = "https://git.sr.ht/~loic/fuzzcheck-rs"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2"

[dependencies.json]
version = "0.12"
optional = true

[dependencies.decent-serde-json-alternative]
version = "0.5.0"
optional = true

[lib]
name = "fuzzcheck_common"