[package]
name = "fuzzcheck_common"
version = "0.10.0"
authors = ["Loïc Lecrenier <loic.lecrenier@me.com>"]
edition = "2021"
description = "Common components for both cargo-fuzzcheck and fuzzcheck"
homepage = "https://fuzzcheck.neocities.org"
license = "MIT"
repository = "https://github.com/loiclec/fuzzcheck-rs"
keywords = ["property", "fuzzer", "fuzzing", "test", "testing"]
categories = ["development-tools::testing"]

[dependencies]
getopts = "0.2"

[dependencies.json]
version = "0.12"
optional = true

[dependencies.decent-serde-json-alternative]
version = "0.5.0"
optional = true

[lib]
name = "fuzzcheck_common"