[package]
name = "fuzzcheck_input"
version = "0.1.0"
authors = ["Loïc Lecrenier <loic.lecrenier@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miniserde = "0.1.11"
fuzzcheck = { path = "../fuzzcheck" }
rand = "0.7.0"
rand_distr = "0.2.1"
