[package]
name = "fuzzcheck_input"
version = "0.1.0"
authors = ["Loïc Lecrenier <loic.lecrenier@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.7", features = ["small_rng"] }
json = "0.12"
fuzzcheck = { path = "../fuzzcheck" }
