[package]
name = "fuzzcheck_mutator_trait"
version = "0.2.1"
authors = ["Loïc Lecrenier <loic.lecrenier@me.com>"]
edition = "2018"
description = "The definition of the Mutator trait used by fuzzcheck-rs"
repository = "https://git.sr.ht/~loic/fuzzcheck-rs"
license = "MIT"
keywords = ["fuzzing", "test"]
categories = ["development-tools"]

[dependencies]
