[package]
name = "fuzzcheck_mutators"
version = "0.2.1"
authors = ["Loïc Lecrenier <loic.lecrenier@me.com>"]
edition = "2018"
description = "Basic mutators for fuzzcheck-rs"
repository = "https://git.sr.ht/~loic/fuzzcheck-rs"
readme = "README.md"
license = "MIT"
keywords = ["fuzzing", "test"]
categories = ["development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# this is conditional on not being compiled as part of a fuzz test because
# in that case, the fuzzcheck_mutator_trait crate is linked manually
# via link-search in the build script, so cargo should not try to fetch
# any version of it
[target.'cfg(not(fuzzcheck_fuzz_target))'.dependencies.fuzzcheck_mutator_trait]
path = "../fuzzcheck_mutator_trait"
version = "0.2.1"

[dependencies.fastrand]
version = "1.0"
