[package]
name = "fuzzcheck_mutators"
version = "0.4.1"
authors = ["Loïc Lecrenier <loic.lecrenier@me.com>"]
edition = "2018"
description = "Basic mutators for fuzzcheck-rs"
repository = "https://git.sr.ht/~loic/fuzzcheck-rs"
readme = "README.md"
license = "MIT"
keywords = ["fuzzing", "test"]
categories = ["development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.fuzzcheck_traits]
path = "../fuzzcheck_traits"
version = "0.5.0"

[dependencies.fuzzcheck_mutators_derive]
path = "../fuzzcheck_mutators_derive"
version = "0.4.0"

[dependencies.fastrand]
version = "1.0"
