[package]
name = "fuzzcheck_mutators"
version = "0.6.0"
authors = ["Loïc Lecrenier <loic.lecrenier@me.com>"]
edition = "2018"
description = "Basic mutators for fuzzcheck-rs"
repository = "https://git.sr.ht/~loic/fuzzcheck-rs"
readme = "README.md"
license = "MIT"
keywords = ["fuzzing", "test"]
categories = ["development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["compile_fuzzcheck_traits"]
fuzzcheck_traits_through_fuzzcheck = ["fuzzcheck"]
compile_fuzzcheck_traits = ["fuzzcheck_traits"]

[dependencies.fuzzcheck]
path = "../fuzzcheck"
version = "0.6.0"
optional = true

[dependencies.fuzzcheck_traits]
path = "../fuzzcheck_traits"
version = "0.6.0"
optional = true

[dependencies.fuzzcheck_mutators_derive]
path = "../fuzzcheck_mutators_derive"
version = "0.6.0"

[dependencies.fastrand]
version = "1.0"

[patch.crates-io]
decent-synquote-alternative = { git = "file:///Users/loic/Documents/decent-synquote-alternative" }