[package]
name = "fuzzcheck_mutators_derive"
version = "0.11.0"
authors = ["Loïc Lecrenier <loic.lecrenier@me.com>"]
edition = "2021"
description = "Procedural macros to generate fuzzcheck mutators"
homepage = "https://fuzzcheck.neocities.org"
repository = "https://github.com/loiclec/fuzzcheck-rs"
license = "MIT"
keywords = ["property", "fuzzer", "fuzzing", "test", "testing"]
categories = ["development-tools::testing"]

[lib]
proc-macro = true

[dependencies]
# decent-synquote-alternative = { path = "/Users/loic/Code/decent-synquote-alternative", package = "decent-synquote-alternative" }
proc-macro2 = "1.0"
quote = "1.0.17"
syn = "1.0.90"
