[package]
name = "fuzzcheck_mutators_derive"
version = "0.12.0"
authors = ["Loïc Lecrenier <loic.lecrenier@me.com>"]
edition = "2021"
description = "Procedural macros to generate fuzzcheck mutators"
homepage = "https://fuzzcheck.neocities.org"
repository = "https://github.com/loiclec/fuzzcheck-rs"
license = "MIT"
keywords = ["property", "fuzzer", "fuzzing", "test", "testing"]
categories = ["development-tools::testing"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.37"
quote = "1.0.18"
syn = "1.0.91"
