[package]
name = "fuzzcheck_nix_subset"
version = "0.1.0"
authors = ["Loïc Lecrenier <loic.lecrenier@me.com>"]
edition = "2018"
description = "Subset of the nix crate used by fuzzcheck-rs"
repository = "https://git.sr.ht/~loic/fuzzcheck-rs"
readme = "README.md"
license = "MIT"

[dependencies]
bitflags = "1.1"
cfg-if = "0.1.10"

[dependencies.libc]
default_features = false
version = "0.2"

[lib]
name = "fuzzcheck_nix_subset"
