[package]
name = "fuzzcheck_serializer"
version = "0.1.0"
authors = ["Loïc Lecrenier <loic.lecrenier@me.com>"]
edition = "2018"
description = "Basic serializers to use with fuzzcheck-rs"
repository = "https://git.sr.ht/~loic/fuzzcheck-rs"
readme = "README.md"
license = "MIT"
keywords = ["fuzzing", "test"]
categories = ["development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuzzcheck = { path = "../fuzzcheck" }
