[package]
name = "fuzzcheck_serializer"
version = "0.5.0"
authors = ["Loïc Lecrenier <loic.lecrenier@me.com>"]
edition = "2018"
description = "Basic serializers to use with fuzzcheck-rs"
repository = "https://git.sr.ht/~loic/fuzzcheck-rs"
readme = "README.md"
license = "MIT"
keywords = ["fuzzing", "test"]
categories = ["development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
serde-json = ["serde", "serde_json"]
serde-json-alternative = ["json", "decent-serde-json-alternative"]

[dependencies.fuzzcheck_traits]
path = "../fuzzcheck_traits"
version = "0.5.0"

[dependencies.serde]
version = "1.0"
optional = true

[dependencies.serde_json]
version = "1.0"
optional = true

[dependencies.json]
version = "0.12"
optional = true

[dependencies.decent-serde-json-alternative]
version = "0.4"
optional = true
